Major Updates to code, logic and styling

--- a/stylesheets/main.less
+++ b/stylesheets/main.less
@@ -1,47 +1,49 @@
-*, *:before, *:after {
+*,
+*:before,
+*:after {
 	box-sizing: border-box;
 }
 
 body {
 	font-family: 'Lato', 'Helvetica Neue', Arial, Helvetica, sans-serif;
-	padding: 15%;
 }
+
 input {
 	&:not([type]),
 	&[type="email"],
 	&[type="text"] {
-		
-    margin: 0em;
-    outline: none;
-    -webkit-appearance: none;
-    tap-highlight-color: rgba(255, 255, 255, 0);
-    line-height: 1.2142em;
-    padding: 0.67861429em 0.5em;
-    font-size: 1em;
-    background: transparent;
-    border: none;
-    border-bottom: 1px solid #DDDDDD;
-    color: rgba(0, 0, 0, 0.87);
-    border-radius: 0em;
-    box-shadow: none;
-    transition: color 0.1s ease, border-color 0.1s ease;
+		margin: 0em;
+		outline: none;
+		-webkit-appearance: none;
+		tap-highlight-color: rgba(255, 255, 255, 0);
+		line-height: 1.2142em;
+		padding: 0.67861429em 0.5em;
+		font-size: 1em;
+		background: transparent;
+		border: none;
+		border-bottom: 1px solid #DDDDDD;
+		color: rgba(0, 0, 0, 0.87);
+		border-radius: 0em;
+		box-shadow: none;
+		transition: color 0.1s ease, border-color 0.1s ease;
 		width: 100%;
 		vertical-align: top;
 	}
 }
+
 //Starting Page
 .main-title {
 	position: fixed;
 	top: 0;
 	left: 0;
 	right: 0;
-	padding: .25em 0 ;
+	padding: .25em 0;
 	background-color: slategray;
 	font-size: 2em;
 	text-transform: uppercase;
 	text-align: center;
-	
 }
+
 .starting-page {
 	display: flex;
 	flex-direction: column;
@@ -52,6 +54,23 @@ input {
 .game-page,
 .post-game-page {
 	display: none;
+	text-align: center;
+	padding: 0 15vw;
+}
+
+//Game Page
+.current-score {
+	margin-bottom: 1em;
+}
+
+.images {
+	img {
+		height: 50vh;
+	}
+}
+
+.btn-group {
+	margin-top: 1em;
 }
 
 //Modal Override
@@ -61,9 +80,24 @@ input {
 	left: 0;
 	right: 0;
 }
+
 .modal.in .modal-dialog {
-	transform: translate(0,-50%);
+	transform: translate(0, -50%);
 }
+
 .modal-footer {
 	border-top: 0;
+}
+
+//Badge Override
+.badge {
+	font-size: 1em;
+}
+
+//Jumbotron Override
+.jumbotron {
+	@media screen and (min-width: 768px) {
+		padding-top: 20px;
+		padding-bottom: 20px;
+	}
 }
