--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -5,7 +5,6 @@
 }
 body {
   font-family: 'Lato', 'Helvetica Neue', Arial, Helvetica, sans-serif;
-  padding: 15%;
 }
 input:not([type]),
 input[type="email"],
@@ -32,7 +31,7 @@ input[type="text"] {
   top: 0;
   left: 0;
   right: 0;
-  padding: .25em 0 ;
+  padding: .25em 0;
   background-color: slategray;
   font-size: 2em;
   text-transform: uppercase;
@@ -47,6 +46,17 @@ input[type="text"] {
 .game-page,
 .post-game-page {
   display: none;
+  text-align: center;
+  padding: 0 15vw;
+}
+.current-score {
+  margin-bottom: 1em;
+}
+.images img {
+  height: 50vh;
+}
+.btn-group {
+  margin-top: 1em;
 }
 .post-game-modal {
   position: absolute;
@@ -59,4 +69,13 @@ input[type="text"] {
 }
 .modal-footer {
   border-top: 0;
+}
+.badge {
+  font-size: 1em;
+}
+@media screen and (min-width: 768px) {
+  .jumbotron {
+    padding-top: 20px;
+    padding-bottom: 20px;
+  }
 }
