--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -53,10 +53,14 @@ input[type="text"] {
   margin-bottom: 1em;
 }
 .images img {
-  height: 50vh;
+  height: 40vh;
 }
 .btn-group {
+  margin-top: 2em;
+}
+.game-page .btn-group {
   margin-top: 1em;
+  margin-bottom: 1em;
 }
 .post-game-modal {
   position: absolute;
