--- a/stylesheets/main.less
+++ b/stylesheets/main.less
@@ -65,12 +65,16 @@ input {
 
 .images {
 	img {
-		height: 50vh;
+		height: 40vh;
 	}
 }
 
 .btn-group {
-	margin-top: 1em;
+	margin-top: 2em;
+	.game-page & {
+		margin-top: 1em;
+		margin-bottom: 1em;
+	}
 }
 
 //Modal Override
